--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
             <!-- Content-->
             <div class="content">
                 <h1>
-                    Landscaping in Tulsa, Oklahoma
+                    We Specialize In Creating Outstanding Sceneries For Homeowners And Commercial Purposes.
                 </h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit dolor.
-                    Scelerisque feugiat fringilla nisi adipiscing ut neque, tristique.
+                    Armed with world-class equipment and years of experience in the field, we're the go-to experts for
+                    landscaping services
+                    you can trust. No job is too big or small for our experts, call us today to get started!
                 </p>
                 <div class="btns">
                     <a href="about.html" class="btn">About Us</a>
@@ -99,7 +100,9 @@
                 </div>
                 <div class="body">
                     <h3>Maintenance</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
+                    <p>Keep your landscape completely flawless without you having to touch a spec of dirt. Our experts
+                        know exactly how to keep
+                        your surrounding space perfect all year round.</p>
                     <a href="#">
                         <p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                     </a>
@@ -115,7 +118,9 @@
                 </div>
                 <div class="body">
                     <h3>Urban</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
+                    <p>Add value to your home by crafting the perfect green surroundings, and give your backyard and
+                        lawn the renovation they
+                        need to draw a smile on your face every time you’re out in the morning.</p>
                     <a href="#">
                         <p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                     </a>
@@ -131,7 +136,9 @@
                 </div>
                 <div class="body">
                     <h3>Gardens</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis facilisi consequat sit. </p>
+                    <p>Optimize your soil for growing your own plants, and let us help you enjoy the growing and farming
+                        experience with the
+                        right plants, fertilizers, and more.</p>
                     <a href="#">
                         <p>Learn More</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                     </a>
@@ -152,19 +159,20 @@
                 </div>
                 <div class="content">
                     <span>About Us</span>
-                    <h2>Green Country’s Top
-                        rated Landscaping Experts </h2>
+                    <h2>Landscaping Experts With An Eye For Aesthetics And Practicality.</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                        nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed
-                        orci suspendisse. Vitae nisl euismod consectetur sed sit molestie. Integer porttitor tellus
-                        vestibulum dolor mi venenatis turpis.
+                        Based in Tulsa, Oklahoma, Lawncare started as a step up for the landscaping services in the area
+                        as a whole. Fast
+                        forward to 30 years, and today we stand as one of the highest-rated landscapers in the state,
+                        giving every client
+                        solutions that fit their needs like a glove.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                        nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed
-                        orci suspendisse. Vitae nisl euismod consectetur sed sit molestie. Integer porttitor tellus
-                        vestibulum dolor mi venenatis turpis.
+                        Our priorities are efficiency, safety, and quality, if these 3 boxes aren’t checked off, then
+                        our work is yet to be
+                        completed. We provide you with the best results in record time, giving you a punctual,
+                        professional experience with no
+                        unwanted downtime or delays!
                     </p>
                     <div class="btns">
                         <a href="contact.html" class="btn">Contact us</a>
@@ -178,16 +186,17 @@
         <section id="home-services">
             <div class="heading">
                 <span>Our Services</span>
-                <h2>Let Us Bring Your Yard <br> Back To Life</h2>
+                <h2>How Can We Help?</h2>
             </div>
             <div class="container">
                 <div class="card">
                     <img src="/assets/lanscape.svg" width="25" height="25" alt="">
                     <div>
-                        <h3>Service Item #1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
-                            sed orci suspendisse. </p>
+                        <h3>Design Concept Assistance</h3>
+                        <p>Our 3 decades of experience give us enough knowledge of the science that goes behind
+                            landscaping, which is why we can
+                            help you make use of the space you have in the most practical, cost-effective, and
+                            aesthetically-pleasing way.</p>
                         <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
@@ -197,10 +206,12 @@
                 <div class="card">
                     <img src="/assets/lanscape.svg" width="25" height="25" alt="">
                     <div>
-                        <h3>Service Item #2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
-                            sed orci suspendisse. </p>
+                        <h3>Tree, Shrub, And Plant Installation</h3>
+                        <p>Whether you need 1 tree installed in your backyard for a new treehouse, or you’re looking to
+                            surround a large property
+                            with plants hand-picked to suit your needs and general theme, Lawncare can guarantee
+                            flawless installation on a
+                            timeframe you can trust.</p>
                         <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
@@ -210,10 +221,12 @@
                 <div class="card">
                     <img src="/assets/lanscape.svg" width="25" height="25" alt="">
                     <div>
-                        <h3>Service Item #3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
-                            sed orci suspendisse. </p>
+                        <h3>New Grass And Sod Installation</h3>
+                        <p>No matter how large or small your lawn is, we can help you cover it completely with
+                            high-quality sod sourced from the
+                            best suppliers in the country, guaranteeing the exact results you’re after, brought to life
+                            by our Lawncare
+                            professionals.</p>
                         <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
@@ -223,10 +236,13 @@
                 <div class="card">
                     <img src="/assets/lanscape.svg" width="25" height="25" alt="">
                     <div>
-                        <h3>Service Item #4</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                            nibh donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor
-                            sed orci suspendisse. </p>
+                        <h3>Driveways, Patios, And Walkways</h3>
+                        <p>If you're looking for pathways, driveways, and walkways that last a lifetime without any
+                            cracks, splits, or fading in
+                            sight, Lawncare is where you need to be. We help you find the right choices for your needs
+                            and carry out the
+                            installation process, all without disrupting your day-to-day routine.
+                        </p>
                         <a href="contact.html">
                             <p>Request Quote</p><img src="/assets/right-arrow.svg" alt="" width="20" height="20">
                         </a>
@@ -240,7 +256,9 @@
         <section id="small-contact">
             <div class="heading">
                 <div>
-                    <h2>We offer Landscaping in Tulsa, Broken Arrow, and Glenpool. Give us a call today!</h2>
+                    <h2>If Your Property Is Located In Tulsa, Broken Arrow, Or Glenpool, Then You're In Luck! Call Us
+                        Today To Book An
+                        Appointment.</h2>
                     <!-- <p>Serving the best quality work for Tulsa, Oklahoma and surrounding areas</p> -->
                 </div>
                 <a href="contact.html" class="btn">Request a Consultation</a>
@@ -253,37 +271,34 @@
             <div class="container">
                 <div class="heading">
                     <span>Why Us</span>
-                    <h2>Why you should choose us as your landscapers</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                        nibh
-                        donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed orci
-                        suspendisse.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis amet, vel luctus nunc,
-                        nibh
-                        donec aenean orci. Mi lorem in accumsan ut imperdiet odio fames. Fermentum ac auctor sed orci
-                        suspendisse.</p>
+                    <h2>Why Choose Rodriguez Lawncare?</h2>
+                    <p>The answer is simple: Experience. We're passionate about what we do, which to our customers means
+                        that we bring our
+                        A-game to every single project. With Lawncare, you're investing in quality, punctuality, and
+                        flawless execution, with
+                        landscaping solutions that withstand the test of time.</p>
                 </div>
                 <div class="cards">
                     <div class="card">
                         <div class="circle">
                             <img src="/assets/quality.svg" alt="" width="25" height="25">
                         </div>
-                        <h3>Quality One</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <h3>Quality</h3>
+                        <p>An unmatched fit and finish in every detail.</p>
                     </div>
                     <div class="card">
                         <div class="circle">
                             <img src="/assets/quality.svg" alt="" width="25" height="25">
                         </div>
-                        <h3>Quality Two</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <h3>Always On Time</h3>
+                        <p>No delays, inconveniences, or downtime.</p>
                     </div>
                     <div class="card">
                         <div class="circle">
                             <img src="/assets/quality.svg" alt="" width="25" height="25">
                         </div>
-                        <h3>Quality Three</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <h3>Experienced</h3>
+                        <p>We help bring your vision to reality.</p>
                     </div>
                 </div>
                 <div class="graphic">
@@ -348,16 +363,16 @@
         <section id="test">
             <div class="container">
                 <div class="item">
-                    <h2><span>20</span>Years</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <h2><span>30</span>Years</h2>
+                    <p>Experienced professionals who know how to build long-lasting landscaping solutions.</p>
                 </div>
                 <div class="item">
                     <h2><span>Local</span>Business</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Lawncare has been trusted and highly rated in the state for years, and for good reason.</p>
                 </div>
                 <div class="item">
                     <h2><span>30</span>Workers</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>No job is too big or small for Lawncare. No matter your needs, we can cover them flawlessly.</p>
                 </div>
             </div>
         </section>
@@ -453,7 +468,8 @@
         <section id="small-contact" class='last-misc' style="margin-top: unset;">
             <div class="heading">
                 <div>
-                    <h2>We offer Landscaping in Tulsa, Broken Arrow, and Glenpool. Give us a call today!</h2>
+                    <h2>Join Us Today, And Let Us Help You Revamp Your While You Enjoy A Seamless, Stress-Free
+                        Experience.</h2>
                     <!-- <p>Serving the best quality work for Tulsa, Oklahoma and surrounding areas</p> -->
                 </div>
                 <a href="contact.html" class="btn">Request a Consultation</a>
